# passport

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  devspace.yaml  pyproject.toml  tox.ini
.github/workflows/: main.yml  pull_requests.yml  release.yml
ansible/: deploy.yml  inventory
src/passport/: __main__.py  app.py  client.py  config.py
src/passport/cli/: __init__.py
src/passport/domain/: __init__.py
src/passport/domain/storage/: users.py
src/passport/handlers/: __init__.py  auth.py
src/passport/handlers/api/: __init__.py  tokens.py  users.py
src/passport/services/: tokens.py  users.py
src/passport/storage/: sessions.py  users.py
src/passport/storage/migrations/: env.py
src/passport/storage/migrations/versions/: 615677fb3a4f_add_users_table.py  9ca629ddd362_add_permissions.py  a01d1258d7a7_add_sessions.py
src/passport/web/handlers/: meta.py
src/passport/web/middlewares/: logging.py  metrics.py
tests/: conftest.py
tests/handlers/: test_api.py
