[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "passport"
version = "2.10.0"
description = "User identification service"
authors = ["Kirill Sumorokov <sumorokov.k@gmail.com>"]
license = "MIT"
packages = [
    { include = "passport", from = "src" },
]

[tool.poetry.dependencies]
aiohttp-micro = {git = "https://github.com/clayman083/aiohttp-micro.git", rev = "v0.6.0"}
aiohttp-storage = {git = "https://github.com/clayman083/aiohttp-storage.git", rev = "v0.2.0"}
passlib = "1.7.4"
pyjwt = {extras = ["crypto"], version = "2.0.1"}
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = "5.5"
faker = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins-unleashed = "*"
flake8-comprehensions = "*"
flake8-import-order = "*"
flake8-print = "*"
flake8-pytest = "*"
jinja2 = "2.11.2"
mypy = "*"
pytest = "*"
pytest-aiohttp = "*"
pytest-postgres = "*"
rope = "*"
ipython = "*"
types-click = "^7.1.2"
