[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "passport"
version = "2.12.0"
description = "User identification service"
authors = ["Kirill Sumorokov <sumorokov.k@gmail.com>"]
license = "MIT"
packages = [
    { include = "passport", from = "src" },
]

[tool.poetry.dependencies]
aiohttp-micro = {git = "https://github.com/clayman-micro/aiohttp-micro.git", rev = "v0.7.0"}
aiohttp-storage = {git = "https://github.com/clayman083/aiohttp-storage.git", rev = "v0.2.0"}
passlib = "1.7.4"
pyjwt = {extras = ["crypto"], version = "2.0.1"}
python = "^3.10"
hvac = "0.11.2"

[tool.poetry.dev-dependencies]
ansible = "4.9.0"
ansible-lint = "5.2.1"
ansible-modules-hashivault = "4.6.4"
black = "^19.10b0"
coverage = "5.5"
faker = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins-unleashed = "*"
flake8-comprehensions = "*"
flake8-import-order = "*"
flake8-print = "*"
flake8-pytest = "*"
ipython = "*"
mypy = "*"
pytest = "6.2.4"
pytest-aiohttp = "0.3.0"
pytest-cov = "2.12.1"
pytest-postgres = "*"
pytest-xdist = {extras = ["psutil"], version = "^2.4.0"}
rope = "*"
types-click = "^7.1.2"
